crates/memscribe-testkit/tests/snapshots/events__windsurf__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 0,
    "event_id": "426e144c4a989f842c70156c36b6777b14250cc54a02889e2e55e95831f1d4c4",
    "parent_id": null,
    "timestamp": "1970-01-01T00:00:00Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/Users/dev/acme-api",
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      },
      "model": "cascade-base",
      "tool_version": "1.8.2"
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 1,
    "event_id": "u1",
    "parent_id": null,
    "timestamp": "2026-06-22T14:00:00Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Let's use Postgres instead of MySQL for the orders service.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 166,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 2,
    "event_id": "a1",
    "parent_id": "u1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Good call. I'll swap the driver and update the connection string.",
      "thinking": null,
      "model": "cascade-base",
      "usage": {
        "input_tokens": 420,
        "output_tokens": 188,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 3,
    "event_id": "a1#toolcall:call_db_1",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call_db_1",
      "name": "edit_file",
      "args": {
        "path": "src/db/mod.rs"
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 4,
    "event_id": "a1#toolcall:call_cfg_1",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call_cfg_1",
      "name": "edit_file",
      "args": {
        "path": "config/database.toml"
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 5,
    "event_id": "a1#toolresult:call_db_1",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call_db_1",
      "ok": true,
      "output": "applied"
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 6,
    "event_id": "a1#toolresult:call_cfg_1",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call_cfg_1",
      "ok": true,
      "output": "applied"
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 7,
    "event_id": "a1#edit:0",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call_db_1",
      "diff": {
        "path": "src/db/mod.rs",
        "old": "use mysql_async::Pool;",
        "new": "use sqlx::postgres::PgPool;",
        "unified": "@@ -1,1 +1,1 @@\n-use mysql_async::Pool;\n+use sqlx::postgres::PgPool;",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 8,
    "event_id": "a1#edit:1",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call_cfg_1",
      "diff": {
        "path": "config/database.toml",
        "old": "driver = \"mysql\"\nport = 3306",
        "new": "driver = \"postgres\"\nport = 5432",
        "unified": "@@ -1,2 +1,2 @@\n-driver = \"mysql\"\n-port = 3306\n+driver = \"postgres\"\n+port = 5432",
        "added_lines": 2,
        "removed_lines": 2
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 332,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-happy-001",
    "seq": 9,
    "event_id": "u2",
    "parent_id": "a1",
    "timestamp": "2026-06-22T14:01:10Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "9f3c1a7e",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Looks right, thanks.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/happy_path_decision_then_edits.jsonl",
      "byte_offset": 1332,
      "line_no": 4
    }
  }
]
