crates/memscribe-testkit/tests/snapshots/events__windsurf__v1__no_commitment_marker.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 0,
    "event_id": "2fc57190b0d4cb9a857596676dcf3b535f9c15cf62b5a75369a872d8ee0468e2",
    "parent_id": null,
    "timestamp": "1970-01-01T00:00:00Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/Users/dev/acme-api",
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      },
      "model": "cascade-base",
      "tool_version": "1.8.2"
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 1,
    "event_id": "u1",
    "parent_id": null,
    "timestamp": "2026-06-22T17:00:00Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Thanks, this looks good to me.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 169,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 2,
    "event_id": "a1",
    "parent_id": "u1",
    "timestamp": "2026-06-22T17:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Glad it works. I'll tidy the trailing whitespace in the widget while I'm here.",
      "thinking": null,
      "model": "cascade-base",
      "usage": {
        "input_tokens": 70,
        "output_tokens": 38,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 309,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 3,
    "event_id": "a1#toolcall:call_nm_tidy",
    "parent_id": "a1",
    "timestamp": "2026-06-22T17:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call_nm_tidy",
      "name": "edit_file",
      "args": {
        "path": "src/widget.rs"
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 309,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 4,
    "event_id": "a1#toolresult:call_nm_tidy",
    "parent_id": "a1",
    "timestamp": "2026-06-22T17:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call_nm_tidy",
      "ok": true,
      "output": "applied"
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 309,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 5,
    "event_id": "a1#edit:0",
    "parent_id": "a1",
    "timestamp": "2026-06-22T17:00:06Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call_nm_tidy",
      "diff": {
        "path": "src/widget.rs",
        "old": "fn render() { }  ",
        "new": "fn render() {}",
        "unified": "@@ -1,1 +1,1 @@\n-fn render() { }  \n+fn render() {}",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 309,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "windsurf",
    "session_id": "ws-nomarker-009",
    "seq": 6,
    "event_id": "u2",
    "parent_id": "a1",
    "timestamp": "2026-06-22T17:00:30Z",
    "project": {
      "cwd": "/Users/dev/acme-api",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "ok",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/windsurf/v1/no_commitment_marker.jsonl",
      "byte_offset": 908,
      "line_no": 4
    }
  }
]
